--- a/index.html
+++ b/index.html
@@ -5,11 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
   <title>당일민족 상담 신청</title>
   <style>
-    /* 전체 폰트 크기 + Pretendard */
     body { font-family: 'Pretendard', sans-serif; background-color: #f9fbfd; margin: 0; padding: 20px; font-size: 18px; color: #000; }
     .container { max-width: 720px; margin: auto; }
 
-    /* 배너 크게 및 비율 맞춤 */
     .banner {
       background: #fff;
       z-index: 20;
@@ -26,25 +24,33 @@
       margin: 0 auto;
     }
 
-    /* 실제 후기 영역 스타일 */
-    .review-section {
-      background-color: #fffde7;
-      border: 3px solid #000; /* 검정색으로 변경 */
-      border-radius: 14px;
-      padding: 10px;
-      margin: 20px 0 30px;
-      font-size: 18px; /* 폰트 크기 통일 */
+    /* 상담예약 텍스트 중앙 */
+    .reservation-title {
+      font-size: 18px;
+      font-weight: 700;
+      text-align: center;
+      margin: 30px 0 10px 0;
       color: #000;
     }
 
+    /* 실제 후기 영역 */
+    .review-section {
+      background-color: #fffde7;
+      border: 3px solid #ff9800;
+      border-radius: 14px;
+      padding: 15px 10px 10px 10px;
+      box-shadow: 0 0 15px rgba(255, 152, 0, 0.6);
+      margin: 20px 0 30px;
+      font-size: 18px;
+      color: #000;
+    }
     .review-title {
-      font-size: 18px; /* 폰트 크기 통일 */
+      font-size: 18px;
       font-weight: 700;
       color: #000;
       margin-bottom: 10px;
       text-align: center;
     }
-
     .review-slider {
       display: flex;
       overflow-x: auto;
@@ -52,31 +58,31 @@
       gap: 10px;
       padding: 10px 0 20px 0;
       scrollbar-width: thin;
-      scrollbar-color: #000 #eee; /* 검정으로 변경 */
+      scrollbar-color: #ff9800 #eee;
     }
     .review-slider::-webkit-scrollbar {
       height: 8px;
     }
     .review-slider::-webkit-scrollbar-thumb {
-      background: #000;
+      background: #ff9800;
       border-radius: 4px;
     }
     .review-slide {
       flex: 0 0 auto;
       scroll-snap-align: start;
-      width: 140px;
-      height: 100px;
+      width: 300px;
+      height: 200px;
       border-radius: 12px;
-      box-shadow: none;
+      box-shadow: 0 0 10px rgba(255, 152, 0, 0.7);
       position: relative;
       cursor: pointer;
       overflow: hidden;
-      border: 2px solid #000; /* 검정색 */
+      border: 3px solid #ff9800;
       transition: box-shadow 0.3s ease;
       background-color: #fffde7;
     }
     .review-slide:hover {
-      box-shadow: 0 0 15px rgba(0, 0, 0, 0.7);
+      box-shadow: 0 0 20px rgba(255, 152, 0, 1);
     }
     .review-slide img {
       width: 100%;
@@ -102,63 +108,62 @@
       max-width: 90vw;
       max-height: 80vh;
       border-radius: 12px;
-      box-shadow: 0 0 15px rgba(0,0,0,0.8);
+      box-shadow: 0 0 15px rgba(255,215,0,0.8);
     }
     #review-popup .close-area {
       position: absolute; width: 100%; height: 100%; top:0; left:0; cursor: pointer;
     }
 
+    /* 실시간 상담 현황 */
     .realtime-section {
       background-color: #fff;
       border: 3px solid #000;
       border-radius: 14px;
       padding: 10px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.15);
       margin-bottom: 20px;
-      font-size: 18px; /* 폰트 크기 통일 */
+      font-size: 18px;
       color: #000;
       position: relative;
     }
-
     .realtime-section > h2 {
       font-weight: 700;
       text-align: center;
       margin: 0 0 12px 0;
       padding-top: 2px;
       line-height: 1.1;
-      font-size: 18px; /* 폰트 크기 통일 */
+      font-size: 18px;
       color: #000;
     }
-
     .realtime {
       max-height: 350px;
       position: relative;
-      font-size: 18px; /* 폰트 크기 통일 */
+      font-size: 18px;
       overflow: hidden;
     }
-
     .realtime-inner {
       height: 350px;
-      overflow-y: auto; /* 스크롤 1개로 통합 */
+      overflow: hidden;
       position: relative;
       scrollbar-width: thin;
-      scrollbar-color: #000 #f1f1f1; /* 검정색 */
+      scrollbar-color: #0077c2 #f1f1f1;
       mask-image: linear-gradient(to bottom, transparent 0%, black 10%, black 90%, transparent 100%);
       -webkit-mask-image: linear-gradient(to bottom, transparent 0%, black 10%, black 90%, transparent 100%);
+    }
+    .realtime-inner:hover {
+      overflow-y: auto;
     }
     .realtime-inner::-webkit-scrollbar {
       width: 8px;
     }
     .realtime-inner::-webkit-scrollbar-thumb {
-      background-color: #000;
+      background-color: #0077c2;
       border-radius: 4px;
     }
-
-    /* 테이블 */
     .realtime table {
       width: 100%;
       border-collapse: collapse;
       table-layout: fixed;
-      font-size: 18px; /* 폰트 크기 통일 */
     }
     .realtime thead, .realtime tbody {
       display: table;
@@ -172,43 +177,50 @@
     }
     .realtime tbody.realtime-table-body {
       display: block;
-      max-height: 350px;
-      overflow-y: auto;
+      animation: scrollLoop 60s linear infinite;
       will-change: transform;
+    }
+    .realtime tbody.realtime-table-body:hover {
+      animation-play-state: paused;
+      overflow-y: auto;
+      max-height: 350px;
+      display: block;
     }
     .realtime thead {
       position: sticky;
       top: 0;
       background: #000;
-      color: #fff; /* 흰색으로 변경하여 가독성 */
+      color: #ffd700;
       font-weight: 900;
-      font-size: 18px; /* 폰트 크기 통일 */
+      font-size: 18px;
       z-index: 10;
       border: 1px solid #ccc;
     }
     .realtime th {
-      padding: 24px 8px; /* 행 높이 2배로 키움 */
+      padding: 24px 8px; /* 2배 높이 */
       border: 1px solid #ccc;
       text-align: center;
+      font-size: 18px;
+      color: #000;
     }
     .realtime td {
-      padding: 24px 8px; /* 행 높이 2배로 키움 */
+      padding: 24px 8px; /* 2배 높이 */
       border: 1px solid #ddd;
       text-align: center;
       vertical-align: middle;
       word-break: break-word;
+      font-size: 18px;
       color: #000;
     }
-
-    /* 컬럼 너비 */
-    .realtime th:nth-child(1), .realtime td:nth-child(1) { width: 20%; }
-    .realtime th:nth-child(2), .realtime td:nth-child(2) { width: 20%; }
-    .realtime th:nth-child(3), .realtime td:nth-child(3) { width: 40%; font-weight: 600; font-size: 18px; }
-    .realtime th:nth-child(4), .realtime td:nth-child(4) { width: 10%; } /* 진행상황 칸 너비 2배 줄임 */
+    /* 컬럼 너비 조정 */
+    .realtime th:nth-child(1), .realtime td:nth-child(1) { width: 25%; }
+    .realtime th:nth-child(2), .realtime td:nth-child(2) { width: 25%; }
+    .realtime th:nth-child(3), .realtime td:nth-child(3) { width: 40%; font-weight: 600; }
+    .realtime th:nth-child(4), .realtime td:nth-child(4) { width: 10%; } /* 진행상황 너비 축소 */
 
     .admin-cell {
-      min-width: 70px; /* 진행상황 칸 너비 줄임 */
-      padding: 12px !important; /* 패딩 조금 증가 */
+      min-width: 70px;
+      padding: 12px !important;
       font-size: 18px;
     }
 
@@ -218,7 +230,7 @@
     .status-green { color: green; font-weight: bold; }
 
     .admin-select {
-      padding: 6px 8px;
+      padding: 4px 6px;
       font-size: 18px;
       border-radius: 6px;
       border: 1px solid #ccc;
@@ -226,19 +238,19 @@
       min-width: 90px;
     }
 
-    /* 절취선 100% 너비 + 상담예약 텍스트 삽입 */
+    /* 절취선에서 텍스트 제거 */
     .section-separator {
-      width: 100%;
       border-top: 2px dashed #ccc;
       margin: 20px 0 30px 0;
+      width: 100%;
       position: relative;
       text-align: center;
       font-weight: 700;
-      font-size: 18px; /* 폰트 크기 통일 */
+      font-size: 18px;
       color: #000;
     }
     .section-separator::before {
-      content: "상담예약";
+      content: "";
       position: absolute;
       top: -14px;
       left: 50%;
@@ -264,7 +276,7 @@
       cursor: pointer;
       text-align: center;
       transition: background 0.2s, color 0.2s;
-      font-size: 18px; /* 폰트 크기 통일 */
+      font-size: 18px;
       color: #000;
     }
     .btn-group button.active {
@@ -292,7 +304,7 @@
       font-weight: bold;
       display: block;
       margin-bottom: 6px;
-      font-size: 18px; /* 폰트 크기 통일 */
+      font-size: 18px;
       color: #000;
     }
     input[type=text], input[type=tel], select {
@@ -340,6 +352,7 @@
       border-radius: 8px;
       border: 1px solid #ddd;
       margin-bottom: 15px;
+      color: #000;
     }
 
     .submit-btn {
@@ -349,7 +362,7 @@
       padding: 14px;
       border: none;
       border-radius: 8px;
-      font-size: 18px; /* 폰트 크기 통일 */
+      font-size: 18px;
       cursor: pointer;
       transition: background-color 0.3s ease;
     }
@@ -359,53 +372,50 @@
 
     @media (max-width: 600px) {
       body {
-        font-size: 9px; /* 모바일 폰트 2배 이상 줄임 */
+        font-size: 14px;
         padding: 10px;
         color: #000;
       }
       .realtime table {
-        font-size: 9px !important; /* 모바일 폰트 축소 */
+        font-size: 14px !important;
       }
       .realtime th:nth-child(1), .realtime td:nth-child(1) { width: 25%; }
       .realtime th:nth-child(2), .realtime td:nth-child(2) { width: 25%; }
-      .realtime th:nth-child(3), .realtime td:nth-child(3) { width: 35%; font-size: 8px !important; }
+      .realtime th:nth-child(3), .realtime td:nth-child(3) { width: 35%; font-size: 14px !important; }
       .realtime th:nth-child(4), .realtime td:nth-child(4) { width: 15%; }
       .admin-cell {
-        font-size: 7px !important;
-        padding: 6px !important;
-        min-width: 40px !important;
+        font-size: 14px !important;
+        padding: 12px !important;
       }
       .admin-select {
-        font-size: 7px !important;
+        font-size: 14px !important;
       }
       .btn-group button {
-        font-size: 9px;
+        font-size: 16px;
         padding: 8px;
-        color: #000;
       }
       .notice-box {
-        font-size: 7px;
+        font-size: 13px;
       }
       input[type=text], input[type=tel], select {
         width: 95%;
-        font-size: 8px;
+        font-size: 14px;
         padding: 8px;
-        color: #000;
       }
       .submit-btn {
-        font-size: 9px;
+        font-size: 16px;
         padding: 12px;
       }
       .review-slide {
-        width: 70px;
-        height: 50px;
-        border-width: 1px;
+        width: 140px;
+        height: 100px;
+        border-width: 2px;
       }
       .banner img {
         height: auto;
       }
-      .section-separator::before {
-        font-size: 9px !important;
+      .reservation-title {
+        font-size: 14px;
       }
     }
 
@@ -442,28 +452,35 @@
       </div>
     </div>
 
+    <div class="reservation-title">상담예약</div>
+
     <div class="section-separator"></div>
 
-    <div class="realtime-section">
-      <h2>💬 실시간 상담 현황</h2>
-      <div class="realtime">
-        <div class="realtime-inner" id="realtime-inner">
-          <table>
-            <thead>
-              <tr>
-                <th>접수일자</th><th>고객명</th><th>상품</th>
-                <th class="admin-cell">진행상황<br /><span style="font-weight:normal;font-size:13px;color:#ddd;">(관리자 변경)</span></th>
-              </tr>
-            </thead>
-            <tbody class="realtime-table-body" id="realtime-body">
-              <tr><td colspan="4">데이터를 불러오는 중...</td></tr>
-            </tbody>
-          </table>
-        </div>
-      </div>
+    <div class="section-title" style="font-size:18px; font-weight:700; margin-bottom:8px; text-align:center;">Q. 상품을 선택해주세요.</div>
+    <div class="btn-group" id="product-group">
+      <button type="button">인터넷</button>
+      <button type="button">인터넷+TV</button>
+      <button type="button">인터넷+TV+집전화</button>
+      <button type="button" class="tv-extra">TV추가</button>
+    </div>
+    <div class="notice-box">
+      인터넷+TV 2대 신청이시거나 TV만 신청하신 고객님은<br />
+      반드시 <span style="color:#0077c2;font-weight:bold;">‘인터넷+TV’</span>와 <span style="color:#ff9800;font-weight:bold;">‘TV추가’</span> 버튼을 함께 선택해주세요.<br />
+      TV만 신청하실 경우 <span style="color:#ff9800;font-weight:bold;">‘TV추가’</span>만 선택하셔도 접수 가능합니다.
     </div>
 
-    <div class="section-separator"></div>
+    <div class="section-title" style="font-size:18px; font-weight:700; margin-bottom:8px;">Q. 통신사를 선택해주세요.</div>
+    <div class="btn-group" id="carrier-group">
+      <button type="button">SK</button><button type="button">KT</button><button type="button">LG</button>
+      <button type="button">LG 헬로비전</button><button type="button">KT 스카일라이프</button>
+    </div>
+
+    <div class="section-title" style="font-size:18px; font-weight:700; margin-bottom:8px;">Q. 부가상품을 선택해주세요. (복수 선택 가능)</div>
+    <div class="btn-group multi" id="addons-group">
+      <button type="button">유심</button><button type="button">정수기</button><button type="button">CCTV</button>
+    </div>
+
+    <div style="border-top: 2px dashed #ccc; margin: 30px 0;"></div>
 
     <form id="applicationForm" autocomplete="off">
       <input type="hidden" name="폼구분" value="v2" />
@@ -471,33 +488,6 @@
       <input type="hidden" name="product" id="product" />
       <input type="hidden" name="tv_extra" id="tv_extra" />
       <input type="hidden" name="addons" id="addons" />
-
-      <div class="section-title" style="font-size:18px; font-weight:700; color:#000; margin-bottom: 8px;">상담예약</div>
-      <div class="section-title" style="font-size:18px; font-weight:700; color:#000;">Q. 상품을 선택해주세요.</div>
-      <div class="btn-group" id="product-group">
-        <button type="button">인터넷</button>
-        <button type="button">인터넷+TV</button>
-        <button type="button">인터넷+TV+집전화</button>
-        <button type="button" class="tv-extra">TV추가</button>
-      </div>
-      <div class="notice-box">
-        인터넷+TV 2대 신청이시거나 TV만 신청하신 고객님은<br />
-        반드시 <span style="color:#0077c2;font-weight:bold;">‘인터넷+TV’</span>와 <span style="color:#ff9800;font-weight:bold;">‘TV추가’</span> 버튼을 함께 선택해주세요.<br />
-        TV만 신청하실 경우 <span style="color:#ff9800;font-weight:bold;">‘TV추가’</span>만 선택하셔도 접수 가능합니다.
-      </div>
-
-      <div class="section-title" style="font-size:18px; font-weight:700; color:#000;">Q. 통신사를 선택해주세요.</div>
-      <div class="btn-group" id="carrier-group">
-        <button type="button">SK</button><button type="button">KT</button><button type="button">LG</button>
-        <button type="button">LG 헬로비전</button><button type="button">KT 스카일라이프</button>
-      </div>
-
-      <div class="section-title" style="font-size:18px; font-weight:700; color:#000;">Q. 부가상품을 선택해주세요. (복수 선택 가능)</div>
-      <div class="btn-group multi" id="addons-group">
-        <button type="button">유심</button><button type="button">정수기</button><button type="button">CCTV</button>
-      </div>
-
-      <div style="border-top: 2px dashed #ccc; margin: 30px 0;"></div>
 
       <div class="form-field">
         <label for="name">성함</label>
@@ -533,6 +523,25 @@
       <br /><br />
       <button class="submit-btn" type="submit">상담 신청하기</button>
     </form>
+
+    <div class="realtime-section">
+      <h2>💬 실시간 상담 현황</h2>
+      <div class="realtime">
+        <div class="realtime-inner" id="realtime-inner">
+          <table>
+            <thead>
+              <tr>
+                <th>접수일자</th><th>고객명</th><th>상품</th>
+                <th class="admin-cell">진행상황<br /><span style="font-weight:normal;font-size:13px;color:#ddd;">(관리자 변경)</span></th>
+              </tr>
+            </thead>
+            <tbody class="realtime-table-body" id="realtime-body">
+              <tr><td colspan="4">데이터를 불러오는 중...</td></tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
   </div>
 
   <div id="review-popup" aria-hidden="true">
@@ -568,13 +577,14 @@
         }
 
         const limitedRecords = data.records.slice(0, 50);
+        // 무한 스크롤을 위해 복제
+        const combinedRecords = [...limitedRecords, ...limitedRecords];
 
-        limitedRecords.forEach((record) => {
+        combinedRecords.forEach((record, idx) => {
           const row = record.fields;
           const status = row["진행상황"] || "상담예약";
-          const id = record.id;
+          const id = record.id + (idx >= limitedRecords.length ? "_dup" : "");
 
-          // 접수일자에서 시간 제외하고 날짜만 YYYY-MM-DD 형식으로 자름
           let time = row["접수일자"] || "";
           if(time.length >= 10){
             time = time.slice(0,10);
@@ -608,7 +618,7 @@
           document.querySelectorAll(".admin-select").forEach((select) => {
             select.addEventListener("change", async function () {
               const id = this.getAttribute("data-id");
-              await updateStatusAirtable(id, this.value);
+              await updateStatusAirtable(id.replace("_dup", ""), this.value);
               fetchDataAirtable();
             });
           });
