--- a/index.html
+++ b/index.html
@@ -5,35 +5,30 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
   <title>당일민족 상담 신청</title>
   <style>
-    body { font-family: 'Pretendard', sans-serif; background-color: #f9fbfd; margin: 0; padding: 20px; font-size: 18px; color: #000; }
+    /* 전체 폰트 크기 + Pretendard */
+    body { font-family: 'Pretendard', sans-serif; background-color: #f9fbfd; margin: 0; padding: 20px; font-size: 18px; color: #333; }
     .container { max-width: 720px; margin: auto; }
 
+    /* 배너 크게 및 비율 맞춤 */
     .banner {
       background: #fff;
       z-index: 20;
       padding-bottom: 10px;
+      /* position: sticky 제거 */
+      /* top: 0; */
     }
     .banner img {
       width: 100%;
-      height: auto;
+      height: auto;      /* 이미지 원본 비율 유지하면서 전체 표시 */
       max-height: none;
       border-radius: 10px;
-      object-fit: contain;
+      object-fit: contain; /* 전체 이미지 보이도록 조정 */
       aspect-ratio: 1920 / 640;
       display: block;
       margin: 0 auto;
     }
 
-    /* 상담예약 텍스트 중앙 */
-    .reservation-title {
-      font-size: 18px;
-      font-weight: 700;
-      text-align: center;
-      margin: 30px 0 10px 0;
-      color: #000;
-    }
-
-    /* 실제 후기 영역 */
+    /* 실제 후기 영역 스타일 */
     .review-section {
       background-color: #fffde7;
       border: 3px solid #ff9800;
@@ -41,16 +36,16 @@
       padding: 15px 10px 10px 10px;
       box-shadow: 0 0 15px rgba(255, 152, 0, 0.6);
       margin: 20px 0 30px;
-      font-size: 18px;
-      color: #000;
     }
+
     .review-title {
-      font-size: 18px;
+      font-size: 25px;
       font-weight: 700;
       color: #000;
       margin-bottom: 10px;
       text-align: center;
     }
+
     .review-slider {
       display: flex;
       overflow-x: auto;
@@ -114,7 +109,6 @@
       position: absolute; width: 100%; height: 100%; top:0; left:0; cursor: pointer;
     }
 
-    /* 실시간 상담 현황 */
     .realtime-section {
       background-color: #fff;
       border: 3px solid #000;
@@ -122,27 +116,28 @@
       padding: 10px;
       box-shadow: 0 0 10px rgba(0,0,0,0.15);
       margin-bottom: 20px;
-      font-size: 18px;
+      font-size: 25px;
       color: #000;
       position: relative;
     }
+
     .realtime-section > h2 {
       font-weight: 700;
       text-align: center;
       margin: 0 0 12px 0;
       padding-top: 2px;
       line-height: 1.1;
-      font-size: 18px;
-      color: #000;
     }
+
     .realtime {
-      max-height: 350px;
+      max-height: 350px;  /* 5명 정도 보이도록 충분한 높이로 증가 */
       position: relative;
-      font-size: 18px;
+      font-size: 25px;
       overflow: hidden;
     }
+
     .realtime-inner {
-      height: 350px;
+      height: 350px; /* realtime과 동일 높이로 증가 */
       overflow: hidden;
       position: relative;
       scrollbar-width: thin;
@@ -160,6 +155,8 @@
       background-color: #0077c2;
       border-radius: 4px;
     }
+
+    /* 테이블 및 애니메이션 */
     .realtime table {
       width: 100%;
       border-collapse: collapse;
@@ -192,35 +189,33 @@
       background: #000;
       color: #ffd700;
       font-weight: 900;
-      font-size: 18px;
+      font-size: 20px;
       z-index: 10;
       border: 1px solid #ccc;
     }
     .realtime th {
-      padding: 24px 8px; /* 2배 높이 */
+      padding: 12px 8px;
       border: 1px solid #ccc;
       text-align: center;
-      font-size: 18px;
-      color: #000;
     }
     .realtime td {
-      padding: 24px 8px; /* 2배 높이 */
+      padding: 12px 8px;
       border: 1px solid #ddd;
       text-align: center;
       vertical-align: middle;
       word-break: break-word;
-      font-size: 18px;
       color: #000;
     }
-    /* 컬럼 너비 조정 */
-    .realtime th:nth-child(1), .realtime td:nth-child(1) { width: 25%; }
-    .realtime th:nth-child(2), .realtime td:nth-child(2) { width: 25%; }
-    .realtime th:nth-child(3), .realtime td:nth-child(3) { width: 40%; font-weight: 600; }
-    .realtime th:nth-child(4), .realtime td:nth-child(4) { width: 10%; } /* 진행상황 너비 축소 */
+
+    /* 컬럼 너비 */
+    .realtime th:nth-child(1), .realtime td:nth-child(1) { width: 20%; }
+    .realtime th:nth-child(2), .realtime td:nth-child(2) { width: 20%; }
+    .realtime th:nth-child(3), .realtime td:nth-child(3) { width: 40%; font-weight: 600; font-size: 18px; }
+    .realtime th:nth-child(4), .realtime td:nth-child(4) { width: 20%; }
 
     .admin-cell {
-      min-width: 70px;
-      padding: 12px !important;
+      min-width: 140px;
+      padding: 6px !important;
       font-size: 18px;
     }
 
@@ -238,26 +233,11 @@
       min-width: 90px;
     }
 
-    /* 절취선에서 텍스트 제거 */
+    /* 절취선 100% 너비 */
     .section-separator {
       border-top: 2px dashed #ccc;
       margin: 20px 0 30px 0;
       width: 100%;
-      position: relative;
-      text-align: center;
-      font-weight: 700;
-      font-size: 18px;
-      color: #000;
-    }
-    .section-separator::before {
-      content: "";
-      position: absolute;
-      top: -14px;
-      left: 50%;
-      transform: translateX(-50%);
-      background-color: #f9fbfd;
-      padding: 0 10px;
-      color: #000;
     }
 
     /* 버튼 그룹 */
@@ -276,8 +256,7 @@
       cursor: pointer;
       text-align: center;
       transition: background 0.2s, color 0.2s;
-      font-size: 18px;
-      color: #000;
+      font-size: 20px;
     }
     .btn-group button.active {
       background-color: #0077c2;
@@ -304,8 +283,6 @@
       font-weight: bold;
       display: block;
       margin-bottom: 6px;
-      font-size: 18px;
-      color: #000;
     }
     input[type=text], input[type=tel], select {
       width: 90%;
@@ -316,7 +293,6 @@
       display: block;
       margin: 0 auto;
       font-size: 16px;
-      color: #000;
     }
 
     .info-banner {
@@ -352,7 +328,6 @@
       border-radius: 8px;
       border: 1px solid #ddd;
       margin-bottom: 15px;
-      color: #000;
     }
 
     .submit-btn {
@@ -372,26 +347,25 @@
 
     @media (max-width: 600px) {
       body {
-        font-size: 14px;
+        font-size: 18px;
         padding: 10px;
-        color: #000;
       }
       .realtime table {
-        font-size: 14px !important;
+        font-size: 16px !important; /* 모바일에서 폰트 축소 */
       }
       .realtime th:nth-child(1), .realtime td:nth-child(1) { width: 25%; }
       .realtime th:nth-child(2), .realtime td:nth-child(2) { width: 25%; }
       .realtime th:nth-child(3), .realtime td:nth-child(3) { width: 35%; font-size: 14px !important; }
-      .realtime th:nth-child(4), .realtime td:nth-child(4) { width: 15%; }
+      .realtime th:nth-child(4), .realtime td:nth-child(4) { width: 30%; }
       .admin-cell {
         font-size: 14px !important;
-        padding: 12px !important;
+        padding: 6px !important;
       }
       .admin-select {
         font-size: 14px !important;
       }
       .btn-group button {
-        font-size: 16px;
+        font-size: 18px;
         padding: 8px;
       }
       .notice-box {
@@ -399,7 +373,7 @@
       }
       input[type=text], input[type=tel], select {
         width: 95%;
-        font-size: 14px;
+        font-size: 16px;
         padding: 8px;
       }
       .submit-btn {
@@ -413,9 +387,6 @@
       }
       .banner img {
         height: auto;
-      }
-      .reservation-title {
-        font-size: 14px;
       }
     }
 
@@ -452,35 +423,28 @@
       </div>
     </div>
 
-    <div class="reservation-title">상담예약</div>
-
     <div class="section-separator"></div>
 
-    <div class="section-title" style="font-size:18px; font-weight:700; margin-bottom:8px; text-align:center;">Q. 상품을 선택해주세요.</div>
-    <div class="btn-group" id="product-group">
-      <button type="button">인터넷</button>
-      <button type="button">인터넷+TV</button>
-      <button type="button">인터넷+TV+집전화</button>
-      <button type="button" class="tv-extra">TV추가</button>
-    </div>
-    <div class="notice-box">
-      인터넷+TV 2대 신청이시거나 TV만 신청하신 고객님은<br />
-      반드시 <span style="color:#0077c2;font-weight:bold;">‘인터넷+TV’</span>와 <span style="color:#ff9800;font-weight:bold;">‘TV추가’</span> 버튼을 함께 선택해주세요.<br />
-      TV만 신청하실 경우 <span style="color:#ff9800;font-weight:bold;">‘TV추가’</span>만 선택하셔도 접수 가능합니다.
-    </div>
-
-    <div class="section-title" style="font-size:18px; font-weight:700; margin-bottom:8px;">Q. 통신사를 선택해주세요.</div>
-    <div class="btn-group" id="carrier-group">
-      <button type="button">SK</button><button type="button">KT</button><button type="button">LG</button>
-      <button type="button">LG 헬로비전</button><button type="button">KT 스카일라이프</button>
-    </div>
-
-    <div class="section-title" style="font-size:18px; font-weight:700; margin-bottom:8px;">Q. 부가상품을 선택해주세요. (복수 선택 가능)</div>
-    <div class="btn-group multi" id="addons-group">
-      <button type="button">유심</button><button type="button">정수기</button><button type="button">CCTV</button>
+    <div class="realtime-section">
+      <h2>💬 실시간 상담 현황</h2>
+      <div class="realtime">
+        <div class="realtime-inner" id="realtime-inner">
+          <table>
+            <thead>
+              <tr>
+                <th>접수일자</th><th>고객명</th><th>상품</th>
+                <th class="admin-cell">진행상황<br /><span style="font-weight:normal;font-size:13px;color:#ddd;">(관리자 변경)</span></th>
+              </tr>
+            </thead>
+            <tbody class="realtime-table-body" id="realtime-body">
+              <tr><td colspan="4">데이터를 불러오는 중...</td></tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
     </div>
 
-    <div style="border-top: 2px dashed #ccc; margin: 30px 0;"></div>
+    <div class="section-separator"></div>
 
     <form id="applicationForm" autocomplete="off">
       <input type="hidden" name="폼구분" value="v2" />
@@ -488,6 +452,32 @@
       <input type="hidden" name="product" id="product" />
       <input type="hidden" name="tv_extra" id="tv_extra" />
       <input type="hidden" name="addons" id="addons" />
+
+      <div class="section-title" style="font-size:20px;">Q. 상품을 선택해주세요.</div>
+      <div class="btn-group" id="product-group">
+        <button type="button">인터넷</button>
+        <button type="button">인터넷+TV</button>
+        <button type="button">인터넷+TV+집전화</button>
+        <button type="button" class="tv-extra">TV추가</button>
+      </div>
+      <div class="notice-box">
+        인터넷+TV 2대 신청이시거나 TV만 신청하신 고객님은<br />
+        반드시 <span style="color:#0077c2;font-weight:bold;">‘인터넷+TV’</span>와 <span style="color:#ff9800;font-weight:bold;">‘TV추가’</span> 버튼을 함께 선택해주세요.<br />
+        TV만 신청하실 경우 <span style="color:#ff9800;font-weight:bold;">‘TV추가’</span>만 선택하셔도 접수 가능합니다.
+      </div>
+
+      <div class="section-title" style="font-size:20px;">Q. 통신사를 선택해주세요.</div>
+      <div class="btn-group" id="carrier-group">
+        <button type="button">SK</button><button type="button">KT</button><button type="button">LG</button>
+        <button type="button">LG 헬로비전</button><button type="button">KT 스카일라이프</button>
+      </div>
+
+      <div class="section-title" style="font-size:20px;">Q. 부가상품을 선택해주세요. (복수 선택 가능)</div>
+      <div class="btn-group multi" id="addons-group">
+        <button type="button">유심</button><button type="button">정수기</button><button type="button">CCTV</button>
+      </div>
+
+      <div style="border-top: 2px dashed #ccc; margin: 30px 0;"></div>
 
       <div class="form-field">
         <label for="name">성함</label>
@@ -523,25 +513,6 @@
       <br /><br />
       <button class="submit-btn" type="submit">상담 신청하기</button>
     </form>
-
-    <div class="realtime-section">
-      <h2>💬 실시간 상담 현황</h2>
-      <div class="realtime">
-        <div class="realtime-inner" id="realtime-inner">
-          <table>
-            <thead>
-              <tr>
-                <th>접수일자</th><th>고객명</th><th>상품</th>
-                <th class="admin-cell">진행상황<br /><span style="font-weight:normal;font-size:13px;color:#ddd;">(관리자 변경)</span></th>
-              </tr>
-            </thead>
-            <tbody class="realtime-table-body" id="realtime-body">
-              <tr><td colspan="4">데이터를 불러오는 중...</td></tr>
-            </tbody>
-          </table>
-        </div>
-      </div>
-    </div>
   </div>
 
   <div id="review-popup" aria-hidden="true">
@@ -565,7 +536,7 @@
     async function fetchDataAirtable() {
       try {
         const res = await fetch(
-          `https://api.airtable.com/v0/${AIRTABLE_BASE_ID}/${encodeURIComponent(AIRTABLE_TABLE_NAME)}?sort[][field]=접수일자&sort[][direction]=desc&maxRecords=50`,
+          https://api.airtable.com/v0/${AIRTABLE_BASE_ID}/${encodeURIComponent(AIRTABLE_TABLE_NAME)}?sort[][field]=접수일자&sort[][direction]=desc&maxRecords=50,
           { headers: { Authorization: "Bearer " + AIRTABLE_TOKEN } }
         );
         const data = await res.json();
@@ -577,7 +548,7 @@
         }
 
         const limitedRecords = data.records.slice(0, 50);
-        // 무한 스크롤을 위해 복제
+        // 원본 + 복제 데이터 붙이기 (무한 스크롤용)
         const combinedRecords = [...limitedRecords, ...limitedRecords];
 
         combinedRecords.forEach((record, idx) => {
@@ -585,6 +556,7 @@
           const status = row["진행상황"] || "상담예약";
           const id = record.id + (idx >= limitedRecords.length ? "_dup" : "");
 
+          // 접수일자에서 시간 제외하고 날짜만 YYYY-MM-DD 형식으로 자름
           let time = row["접수일자"] || "";
           if(time.length >= 10){
             time = time.slice(0,10);
@@ -594,23 +566,23 @@
           const product = row["상품"] || "";
 
           const statusDisplay = isAdmin
-            ? `<select class="admin-select" data-id="${id}">` +
+            ? <select class="admin-select" data-id="${id}"> +
                 ["상담예약","상담중","설치예약","입금완료"].map(opt => {
                   if (opt === "상담중" && status !== "상담예약" && status !== "설치예약" && status !== "입금완료") {
-                    return `<option value="상담중" selected>상담중</option>`;
+                    return <option value="상담중" selected>상담중</option>;
                   }
-                  return `<option value="${opt}" ${opt === status ? "selected" : ""}>${opt}</option>`;
+                  return <option value="${opt}" ${opt === status ? "selected" : ""}>${opt}</option>;
                 }).join("") +
-              `</select>`
-            : `<span class="${statusClass(status)}">${statusIcon(status)} ${status}</span>`;
+              </select>
+            : <span class="${statusClass(status)}">${statusIcon(status)} ${status}</span>;
 
           const tr = document.createElement("tr");
-          tr.innerHTML = `
+          tr.innerHTML = 
             <td>${time}</td>
             <td class="masked-name">${name}</td>
             <td>${product}</td>
             <td class="admin-cell">${statusDisplay}</td>
-          `;
+          ;
           tbody.appendChild(tr);
         });
 
@@ -650,7 +622,7 @@
 
     async function updateStatusAirtable(id, newStatus) {
       await fetch(
-        `https://api.airtable.com/v0/${AIRTABLE_BASE_ID}/${AIRTABLE_TABLE_NAME}/${id}`,
+        https://api.airtable.com/v0/${AIRTABLE_BASE_ID}/${AIRTABLE_TABLE_NAME}/${id},
         {
           method: "PATCH",
           headers: {
@@ -734,9 +706,9 @@
 
         try {
           const res = await fetch(
-            `https://api.airtable.com/v0/${AIRTABLE_BASE_ID}/${encodeURIComponent(
+            https://api.airtable.com/v0/${AIRTABLE_BASE_ID}/${encodeURIComponent(
               AIRTABLE_TABLE_NAME
-            )}`,
+            )},
             {
               method: "POST",
               headers: {
